--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,8 @@
     gtag('config', 'UA-168237760-1');
   </script>
 
-
+  <script data-ad-client="ca-pub-8626665418913736" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+  </script>
 </head>
 <body>
   <app-root></app-root>
