feat(proj) general enhancements

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,15 @@
     gtag('config', 'UA-168237760-1');
   </script>
 
+  <!-- recaptcha -->
+  <script src="https://www.google.com/recaptcha/api.js"></script>
+  <script>
+     function onSubmit(token) {
+       document.getElementById("submit-form").submit();
+     }
+   </script>
+
+  <!-- add -->
   <script data-ad-client="ca-pub-8626665418913736" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
   </script>
 </head>
